<resources>
    <string name="app_name">ParkMe</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_my_account">My Account</string>
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="emailpassword_title_text" translatable="false">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="loading">Loading…</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %s</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_availabel_parking_list" translatable="false">AvailabelParkingList</string>
    <string name="title_activity_parking_info" translatable="false">ParkingInfo</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="title_activity_parking_payment" translatable="false">ParkingPaymentActivity</string>
    <string name="title_activity_maps1" translatable="false">Map</string>
    <string name="paypal_username">Paypal username</string>
    <string name="pay_and_park">pay and go park</string>
    <string name="pay_and_home">pay and go to home</string>
    <string name="paypal_password">Password</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="parking_address">Parking address:</string>
    <string name="when_to_rent">When to rent it?</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="start_time">Start time (per day)</string>
    <string name="end_time">End time (per day)</string>
    <string name="cost">Cost per hour:</string>
    <string name="comments">Comments:</string>
    <string name="i_approve_owner">I approve that the parking is in my property</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="change_parking_dit">Change parking details</string>
    <string name="chang_payment_dit">Change payment details</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="my_calender">My calender</string>
    <string name="add_park">Add park</string>
    <string name="find_park">Find park</string>
    <string name="continue_next">Continue</string>
    <string name="where_to_search">Where to search?</string>
    <string name="by_what">By address or location</string>
    <string name="i_commit">I commit to pay a fine of 150 NIS in case that I will leave the parking late.</string>
    <string name="title_activity_see_map" translatable="false">Address</string>
    <string name="full_add">Full address</string>

</resources>
