<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Change details">
        <menu>
            <item
                android:id="@+id/change_parking"
                android:title="@string/change_parking_dit"
                android:icon="@drawable/settings"
                ></item>
            <item
                android:id="@+id/change_payment"
                android:title="@string/chang_payment_dit"
                android:icon="@drawable/paidparking"
                ></item>

        </menu>
    </item>
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        ></item>
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:icon="@drawable/phone"
        ></item>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        ></item>
</menu>