<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar_layout"
       />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:background="#D9000000"
        >

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/Button.Tinted" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/Button.Tinted" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:visibility="gone" />

    </RelativeLayout>


</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:orientation="vertical"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent">-->


<!--<RelativeLayout-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_vertical">-->

    <!--<LinearLayout-->
        <!--android:id="@+id/email_password_fields"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp">-->

        <!--<EditText-->
            <!--android:id="@+id/field_email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:hint="@string/hint_email"-->
            <!--android:inputType="textEmailAddress" />-->

        <!--<EditText-->
            <!--android:id="@+id/field_password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/hint_password"-->
            <!--android:inputType="textPassword" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:id="@+id/email_password_buttons"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/email_password_fields"-->
        <!--android:orientation="horizontal"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp">-->

        <!--<Button-->
            <!--android:id="@+id/email_sign_in_button"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/sign_in"-->
            <!--android:theme="@style/Button.Tinted" />-->

        <!--<Button-->
            <!--android:id="@+id/email_create_account_button"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/create_account"-->
            <!--android:theme="@style/Button.Tinted" />-->
    <!--</LinearLayout>-->

    <!--<Button-->
        <!--android:id="@+id/sign_out_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:text="@string/sign_out"-->
        <!--android:visibility="gone" />-->

<!--</RelativeLayout>-->


<!--</LinearLayout>-->
